Fix deprecated usage of URL constructor